--- a/book/Introduction_to_algorithms/18_B树.md
+++ b/book/Introduction_to_algorithms/18_B树.md
@@ -15,3 +15,25 @@ B树的严格定义有很多项，简单的说，B树是一颗分支因子很大
 
 ### B树上的基本操作
 
+基本操作包括搜索、创建、插入
+
+搜索的过程较简单，是一个从跟结点向下查找的过程，与二叉搜索树类似，只是将与单个关键字的比较换为与多个关键字的比较。从某个结点的比较看，书中给出的方法是顺序查找，如果 t 较大的话，二分查找会更有效率。
+
+创建操作很简单，只是创建一个空的跟结点。
+
+插入操作不能简单的插入新的叶结点，在遇到满的结点时要将结点分裂为两个结点，以保证插入新元素后仍然是合法的B树。
+
+### 从B树中删除关键字
+
+从B树中删除关键字非常复杂，复杂到书里都不愿意给出代码，只给了思路和分析。
+
+B树的删除操作性能也很高，O(h) 次磁盘操作，O(th) 的 CPU 时间，同插入操作一样高效。
+
+
+
+
+
+
+
+
+
