--- a/book/Introduction_to_algorithms/19_斐波那契堆.md
+++ b/book/Introduction_to_algorithms/19_斐波那契堆.md
@@ -8,6 +8,16 @@
 
 ### 斐波那契堆结构
 
+斐波那契堆是一系列具有最小堆序的有根树的集合。
+
+入口：堆的入口是整个堆中最小的元素，它处于一个双向循环链表中，这个链表叫根链表。所以结点会有 left 和 right 属性指向它的兄弟结点。
+
+孩子：结点只有一个孩子属性，指向孩子链表的入口，这个入口背后同样是一个双向循环链表。
+
+结点的 degree 属性表示其孩子链表的结点数目。
+
+结点的 mark 属性表示该结点自从上一次成为另一个结点的孩子后，是否失去过孩子。（不是太明白这个描述，mark 属性是在调整堆的结构时使用）
+
 ### 可合并堆操作
 
 创建堆
@@ -25,3 +35,14 @@
 抽取最小结点
 分为两步，第一步把入口结点（也就是最小结点）抽出，将它的子结点都添加到根链表中（这时候已经破坏了堆的性质）。第二步执行一系列复杂的合并恢复堆的性质。
 可由一系列复杂的操作证明，Extarct 操作的摊还代价为 O(lgn)
+
+### 关键字减值和删除一个结点
+
+
+
+
+
+
+
+
+
