--- a/book/Introduction_to_algorithms/19_斐波那契堆.md
+++ b/book/Introduction_to_algorithms/19_斐波那契堆.md
@@ -38,7 +38,20 @@
 
 ### 关键字减值和删除一个结点
 
+关键字减值的意思是，把某个结点的关键字减小，然后调整堆的结构。这个调整的过程比较复杂，涉及到 mark 属性的使用，以及“切断”和“级联切断”。
 
+简单的描述减值操作的过程：
+1.将结点的关键字修改后判断是否比父结点小，如果小就从原位置切下来，放到根链表中。
+2.对父结点递归的执行“级联切断”
+3.比较被减值的结点（现在在根链表中）与原 min 结点，选出新的 min 结点。
+
+级联切断是一个向上递归的过程，到根链表中止，某一级中的操作为：判断结点是否被标记，如果被标记则执行“切断”并继续递归，如果没被标记，则标记该结点并中止递归。
+
+可以证明“减值”操作的摊还代价为 O(1)（我表示惊呆）
+
+删除结点的操作是由减值和 Extract 组成的，摊还时间为 O(lgn)
+
+### 最大度数的界
 
 
 
