--- a/book/Introduction_to_algorithms/19_斐波那契堆.md
+++ b/book/Introduction_to_algorithms/19_斐波那契堆.md
@@ -53,9 +53,6 @@
 
 ### 最大度数的界
 
+通过一堆引理证明了斐波那契堆中任意结点的度数的上界 D(n) 为 O(lgn)。
 
-
-
-
-
-
+顺便解释了斐波那契堆名字的由来：斐波那契来自斐波那契数列，堆与数列的关联在于堆的合并操作中，结点的 size（结点为根的子树中所有结点的数目）按数列增长。（这个关联是我自己解释的，并不严谨）
