--- a/book/Hackers_and_Painters/2_黑客与画家.md
+++ b/book/Hackers_and_Painters/2_黑客与画家.md
@@ -1,8 +1,28 @@
     黑客也是创作者，与画家、建筑师、作家一样
     
-关于换位思考
-黑客需要换位思考，软件设计需要换为思考，思考你的用户需要什么，软件的部分功能就是解释自身。
-写代码也需要换为思考，思考其它人，包括几个月后的你，在看这段代码时的感受。
+### 计算机科学
+“计算机科学”是一门混杂的学科，一端是数学家，中间是计算机博物学家，另一端是黑客。  
+这个说法可能也不准确，黑客这一端，应该包括两种，一是“软件工程师”，按照别人设计的规格实现软件的人，另一种是黑客，实现自己设计的软件的人。  
+黑客懂设计，有创造性，做自己想做的东西，做对别人有用的东西。  
+从这个意义上讲，黑客是最适合创业的人。  
 
-黑客是否有机会像画家一样流芳后世呢？
-很难回答，许多画家也是在去世数百年后才名声鹊起，编程的事情，取决于我们现在能用编程创造什么
+### 关于创业  
+在新兴的领域创业，大公司是干不过你的。放心去干，大公司里清醒的人会怕创业者，他们在恐惧被超越。  
+
+### 黑客如何做自己喜欢的事？  
+找一份 day job，白天工作养家糊口，晚上写自己的软件。热爱写代码的人总会有自己的项目。  
+
+### 编码
+阅读优秀的代码  
+不要指望有一个完美的设计，才开始编码，软件的设计是逐步完成的  
+要记住黑客做的是创造性的工作，而创造性的工作是有周期的，当你兴奋时，可以连续工作 16 个小时，当你低迷时，就很难有产出，要认清这一点。  
+
+### 合作
+要学会合作，但不要多个人负责一个模块，应该清晰的划分模块，然后每人负责一部分。我比较同意这种看法，每个人对自己的模块掌握设计的权力，但也要负起相应的责任。
+
+### 关于换位思考
+黑客需要换位思考，软件设计需要换为思考，思考你的用户需要什么，软件的部分功能就是解释自身。  
+写代码也需要换为思考，思考其它人，包括几个月后的你，在看这段代码时的感受。  
+
+### 黑客是否有机会像画家一样流芳后世呢？
+很难回答，许多画家也是在去世数百年后才名声鹊起，编程的事情，取决于我们现在能用编程创造什么  
