--- a/book/Introduction_to_algorithms/22_基本的图算法.md
+++ b/book/Introduction_to_algorithms/22_基本的图算法.md
@@ -14,3 +14,23 @@
 
 ### 广度优先搜索
 
+思路是优先处理离源结点近的结点。
+
+广度优先搜索的过程是这样的：
+1.将源结点放入队列
+2.开始循环的处理队列，直到队列为空  
+处理的做法是从队列中出栈一个元素，将元素的相邻结点（还没有被放入过）放入队列中  
+
+过程中的细节包括两方面：
+1.结点标记颜色（白、灰、黑），来标记是否进入过队列，相邻结点是否都处理完毕
+2.结点填写额外的数据，如 d 表示到根结点的距离，π 表示结点的父结点
+
+广度优先搜索的运行时间为 O(V+E)，即邻接链表大小的一个线性函数。
+
+书中给出了一堆引理，定理，证明运行广度优先搜索后，结点的 d
+ 是结点到根结点的最短路径长度，可以由结点的 π 一路向上找出一条最短路径。
+ 
+广度优先树，是上述算法运行后得到的结果，还可以被称为图 G 的前驱子图。
+
+### 深度优先搜索
+ 
