--- a/book/Hackers_and_Painters/3_不能说的话.md
+++ b/book/Hackers_and_Painters/3_不能说的话.md
@@ -1,6 +1,6 @@
 >文章脉络  
 >1.如何找出不能说的话  
->2.我为什么要找出不能说的话
+>2.我为什么要找出不能说的话  
 >3.知道以后如何做
 
 
@@ -8,8 +8,7 @@
 
 共有五种方法
 
-1.真话  
-不能说的话一般是，正确的，或者看起来很可能正确的话
+1.真话，不能说的话一般是，正确的，或者看起来很可能正确的话
 
 2.异端邪说，被贴上标签的思想
 
