深度优先搜索

--- a/book/Introduction_to_algorithms/22_基本的图算法.md
+++ b/book/Introduction_to_algorithms/22_基本的图算法.md
@@ -34,7 +34,21 @@
 
 ### 深度优先搜索
 
-思路是
+思路是在图中尽量深入的探索，处理完结点的所有出发边后再回来处理该结点。  
+
+深度优先搜索形成的前驱子图和广度优先搜索不同，是一个深度优先森林。且算法能够保证所有的深度优先树是不相交的。    
+
+深度优先搜索树能够提供关于图结构的重要信息。  
+
+深度优先搜索的运行时间为 θ(V+E)  
+
+括号化定理、白色路径定理  
+
+边可以分为树边、后向边、前向边、横向边，书中解释了如何给边分类  
+
+在对无向图的深度优先搜索中，从来不会出现前向边和横向边  
+
+## 拓扑排序
 
 
 
