--- a/book/Introduction_to_algorithms/22_基本的图算法.md
+++ b/book/Introduction_to_algorithms/22_基本的图算法.md
@@ -50,7 +50,19 @@
 
 ## 拓扑排序
 
+拓扑排序是有向无环图中所有结点的一种线性次序，该次序满足，对图的任意一条边（u, v），u 在次序中处于 v 的前面。  
 
+我们可以用拓扑排序来给一堆有相对次序的事件指明一个线性次序，例如穿衣服的次序。  
+
+生成拓扑排序的方法是，利用深度优先搜索遍历图，用一个链表来存储拓扑排序的结果，当深度优先搜索算法给某个结点标记 f（完成时间）时，将结点插入到链表的头部。  
+
+生成拓扑排序的运行时间为 θ(V+E)  
+
+一个有用的引理：引理 22.11，一个有向图是无环的当且仅当对其进行的深度优先搜索不产生后向边。
+
+>可以引申出一个面试题：如何确定一个有向图是否有环？
+
+书中还给出了上述生成算法的正确性证明  
 
 
 
