基本的图算法，强连通分量

--- a/book/Introduction_to_algorithms/22_基本的图算法.md
+++ b/book/Introduction_to_algorithms/22_基本的图算法.md
@@ -64,6 +64,35 @@
 
 书中还给出了上述生成算法的正确性证明  
 
+## 强连通分量
+
+强连通分量是指，有向图的一个最大（意思是尽可能的大）结点集，其中的任意两个结点都可以互相到达。通俗的说就是有向图中的环组成的结点集，不能连通的环就是一个强连通分量。  
+
+一个概念，有向图的转置，是指将图中所有边反向后形成的有向图。图的转置和图有相同的强连通分量    
+
+如何计算一个有向图的强连通分量？  
+1.先对有向图进行深度优先搜索  
+2.生成图的转置图  
+3.对转置图进行深度优先搜索，特别的是在主循环中探索结点时，按照第一步中计算的结点完成时间降序进行探索  
+
+又是一个概念，分量图，定义为通过收缩所有相邻结点都在同一个强连通分量中的边，就得到了分量图。通俗的说就是将计算完强连通的图进行收缩，规则是每个强连通分量都收缩成一个结点，那么剩下的边就是强连通分量以外的边（连接强连通分量的边，或者说不在环中的边）  
+
+分量图是一个有向无环图（因为环都在强连通分量中了）  
+
+接下来书中花了一些篇幅证明上述计算强连通分量算法的正确性，引理 22.13、引理22.14、推论 22.15 以及最后的定理 22.16  
+
+其中的关键在于理解算法中对转置图的深度优先探索形成的森林为何就是图的强连通分量  
+
+
+
+
+
+
+
+
+
+
+
 
 
 
