feat(algorithms): kruskal 算法

--- a/book/Introduction_to_algorithms/23_最小生成树.md
+++ b/book/Introduction_to_algorithms/23_最小生成树.md
@@ -11,4 +11,33 @@
 
 几个定义：切割、横跨切割的边、切割尊重集合 A、轻量级边  
 
-定理 23.1   
+定理 23.1 给出了识别安全边的规则，通俗的描述就是，A 是一个包括在某颗最小生成树中的集合，S 为尊重 A 的一个切割，那么横跨 S 的轻量级边就是安全边。  
+
+推论 23.2 指出了寻找安全边的方法，~~这个描述令我很混乱，也没有看出来这个推论是如何指导下一节的两个算法的。~~仔细思考后理解了推论的意思，之前迷惑的地方在于推论中说 C 是森林 GA 的一个连通分量，而证明中说切割 VC 尊重集合 A，这里应该这样理解，连通分量 C 是森林中的一个孤岛，与外界相连的边都不在集合 A 中，切割 VC 把集合 A 的其它连通分量分割在了另一边，而这一边只有连通分量 C    
+
+## Kruskal 算法和 Prim 算法
+
+#### Kruskal 算法
+
+Kruskal 算法的思路是，在所有连接森林中两颗不同树的边里面，找到权重最小的边（应用到了推论 23.2，树即连通分量，树对外连接的轻量级边都是安全边）  
+
+算法的实现用到了“不相交集合数据结构（第 21 章）”，步骤是：
+* 先将每个结点生成一个集合  
+* 按权重升序的方式将边排序  
+* 按上面排序结果遍历所有边，如果一条边的两个结点不属于同一个集合（边连接两个不同的连通分量），则将该边加入集合 A，并将两个结点所属的集合合并  
+
+Kruskal 算法的性能依赖于选用的“不相交集合数据结构”的性能，书中按“增加按秩合并和路径压缩的不想交集合森林”讨论，经过一系列酷炫的推导，得出结论：Kruskal 算法的运行时间为 O(ElgV)  
+
+#### Prim 算法
+
+
+
+
+
+
+
+
+
+
+
+  
