feat(algorithms): Prim 算法

--- a/book/Introduction_to_algorithms/23_最小生成树.md
+++ b/book/Introduction_to_algorithms/23_最小生成树.md
@@ -30,14 +30,14 @@ Kruskal 算法的性能依赖于选用的“不相交集合数据结构”的性
 
 #### Prim 算法
 
+Prim 算法的思路是，每一步在连接集合 A 和 A 之外的结点的所有边中，选择一条轻量级边加入到 A 中  
 
+集合 A 中的边总是构成一棵树（集合 A 是由一个结点不停的扩展，直到成为一颗包含所有结点的树，这个过程中集合 A 一直是一棵树，区别于 Kruskal 算法中集合 A 是一个森林）  
 
+算法的实现用到了“最小优先队列”，步骤是：
+* 为所有结点都初始化两个额外的属性 key 和 π，其中 key 是该结点和 A 中结点连接的所有边中最小的权重值，初始化值为 ∞，π 是该结点在树中的父节点，初始化值为 nil  
+* 将所有结点加入最小优先队列 Q（根据结点的 key 构建） 
+* 对 Q 取最小结点进行循环，直至 Q 为空。每次循环对当前最小结点的所有连接结点进行遍历，比较更新连接结点的 key 值和 π 值  
 
+Prim 算法的运行时间取决于 Q 的实现方式。如果使用二叉最小优先队列，运行时间为 O(ElgV)。如果使用斐波那契堆，运行时间为 O(E+VlgV)  
 
-
-
-
-
-
-
-  
