--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -16,3 +16,19 @@
 
 #### 负权重的边  
 
+如果图中不包含可以到达的权重为负值的环路，则所有结点的最短路径权重都有精确定义  
+如果包含权重为负值的环路，则环路中的结点最短路径权重都为负无穷
+
+#### 环路
+
+一条最短路径不能包含权重为正值或负值的环路，如果路径中包含权重为 0 的环路，我们可以重复删除这些环路，直到得到一条不含环路的最短路径  
+所以在之后的讨论中我们假设最短路径都不包含环路
+
+#### 最短路径的表示
+
+运行最短路径算法得到一个由 π 诱导的前驱子图，这个前驱子图是一颗最短路径树  
+树中的简单路径都是相应结点之间的一条最短路径  
+最短路径不一定是唯一的，最短路径树也不一定是唯一的  
+
+#### 松弛操作
+
