--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -1,3 +1,5 @@
+## 概要
+
 单源最短路径问题产生的基础是，带权重的有向图  
 
 最短路径的含义是，两个结点之间的路径中，总权重和最小的路径  
@@ -31,4 +33,22 @@
 最短路径不一定是唯一的，最短路径树也不一定是唯一的  
 
 #### 松弛操作
+
+* 对一条边（u,v）松弛的过程是指，比较 v.d（v 的当前最短路径估计）与 u.d + w(u,v) 的值，根据比较结果决定是否更新 v.d  
+* 本章所有算法都要用松弛操作更新最短路径估计的值，各算法的区别只是松弛操作的次数和次序不同  
+
+#### 最短路径和松弛操作的性质
+
+* 三角不等式性质
+* 上界性质
+* 非路径性质
+* 收敛性质
+* 路径松弛性质
+* 前驱子图性质
+
+## Bellman-Ford 算法
+
+
+
+
 
