--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -48,6 +48,13 @@
 
 ## Bellman-Ford 算法
 
+Bellman-Ford 算法思路是对所有的边都进行一次松弛操作，循环 V 遍，用于解决一般情况下的单源最短路径问题（允许权重为负值）  
+Bellman-Ford 算法会返回一个布尔值，当图中包含权重为负值的环路时，返回 FALSE，否则返回 TRUE  
+算法的性能为 O(VE)  
+
+引理 24.2 证明了在不考虑权重为负值的环路时，Bellman-Ford 算法中的循环可以将所有结点的最短路径估计 d 收敛为最短路径值  
+推论 24.3 说明了在不考虑权重为负值的环路时，Bellman-Ford 算法终止时，对所有结点 v，存在从 s 到 v 的路径当且仅当 v.d < ∞  
+定理 24.4 最终证明了算法的正确性  
 
 
 
