--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -48,14 +48,20 @@
 
 ## Bellman-Ford 算法
 
-Bellman-Ford 算法思路是对所有的边都进行一次松弛操作，循环 V 遍，用于解决一般情况下的单源最短路径问题（允许权重为负值）  
-Bellman-Ford 算法会返回一个布尔值，当图中包含权重为负值的环路时，返回 FALSE，否则返回 TRUE  
-算法的性能为 O(VE)  
+* Bellman-Ford 算法思路是对所有的边都进行一次松弛操作，循环 V 遍，用于解决一般情况下的单源最短路径问题（允许权重为负值）  
+* Bellman-Ford 算法会返回一个布尔值，当图中包含权重为负值的环路时，返回 FALSE，否则返回 TRUE  
+* 算法的性能为 O(VE)  
 
-引理 24.2 证明了在不考虑权重为负值的环路时，Bellman-Ford 算法中的循环可以将所有结点的最短路径估计 d 收敛为最短路径值  
-推论 24.3 说明了在不考虑权重为负值的环路时，Bellman-Ford 算法终止时，对所有结点 v，存在从 s 到 v 的路径当且仅当 v.d < ∞  
-定理 24.4 最终证明了算法的正确性  
+* 引理 24.2 证明了在不考虑权重为负值的环路时，Bellman-Ford 算法中的循环可以将所有结点的最短路径估计 d 收敛为最短路径值  
+* 推论 24.3 说明了在不考虑权重为负值的环路时，Bellman-Ford 算法终止时，对所有结点 v，存在从 s 到 v 的路径当且仅当 v.d < ∞  
+* 定理 24.4 最终证明了算法的正确性  
 
+## 有向无环图中的单源最短路径问题
 
+* 令我奇怪的是本节的算法居然没有自己的名字，本节的算法解决的是无环图中的单源最短路径问题，与 Bellman-Ford 算法相比是无法探测环路  
+* 算法的思路是先对图进行拓扑排序（所以无环是关键），在按照拓扑排序的次序对所有结点进行遍历，处理每个结点时对由该结点出发的所有边进行松弛操作  
+* 算法的执行时间为 O(V+E)，性能远远好于 Bellman-Ford 算法  
+* 定理 24.5 证明了该算法的正确性  
+* 本节算法的一个应用是在 PERT 图中分析关键路径（大概意思是一系列有前置关系的工作，权重为工作消耗的时间等成本，计算关键路径）  
 
 
