--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -64,4 +64,19 @@
 * 定理 24.5 证明了该算法的正确性  
 * 本节算法的一个应用是在 PERT 图中分析关键路径（大概意思是一系列有前置关系的工作，权重为工作消耗的时间等成本，计算关键路径）  
 
+## Dijkstra 算法
+
+* Dijkstra 解决的是带权重的有向图上的单源最短路径问题，要求所有边的权重都为非负值  
+* 算法的思路是，将所有结点放入一个最小优先队列，遍历该队列，对每个结点的处理是对由该结点出发的所有边进行松弛操作  
+* 定理 24.6 证明了 Dijkstra 算法的正确性，用了循环不变式的方法反证，略复杂  
+* 推论 24.7 是说 Dijkstra 算法结束时，生成的前驱子图就是一颗最短路径树  
+* Dijkstra 算法的性能主要取决于所使用的最小优先队列的性能，如果使用斐波那契堆来实现，则可以将 Dijkstra 算法的运行时间改善到 O(VlgV+E)  
+
+## 差分约束和最短路径
+
+#### 线性规划
+* 书中给出的线性规划的数学描述非常蛋疼，通俗的说，线性规划问题是在一组约束条件下，找到一个解使得目标函数的值最大  
+
+#### 差分约束系统
+
 
