--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -78,5 +78,10 @@
 * 书中给出的线性规划的数学描述非常蛋疼，通俗的说，线性规划问题是在一组约束条件下，找到一个解使得目标函数的值最大  
 
 #### 差分约束系统
+* 将线性规划问题简化，将线性规划矩阵 A 的每一行包括一个 1 和一个 -1，其余所有项皆为 0，问题就成为一个差分约束系统  
+* 引理 24.8 说明了若 x 是差分约束系统的一个解，那么 x+d 也是该差分约束系统的解  
 
+#### 约束图
+* 将差分约束系统想象为一个带权重的有向图，图中的每条有向边对应 m 个不等式中的一个（差分约束系统的一行）
+* 定理 24.9 证明
 
