--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -83,5 +83,27 @@
 
 #### 约束图
 * 将差分约束系统想象为一个带权重的有向图，图中的每条有向边对应 m 个不等式中的一个（差分约束系统的一行）
-* 定理 24.9 证明
+* 定理 24.9 证明如果约束图不包含权重为负值的环路，则最短路径能构成问题的一个可行解，如果包含权重为负值的环路，则没有可行解
+* 数学果然还是要靠想象力
 
+#### 求解差分约束系统
+* 可以用 Bellman-Ford 算法求解差分约束系统
+
+## 最短路径性质的证明
+
+#### 三角不等式性质
+* 引理 24.10 证明了三角不等式性质，实话说感觉不怎么需要证明，反证一下就能明白  
+
+#### 最短路径估计值的松弛效果
+* 引理 24.11 上界性质，比较好理解，归纳法证明
+* 推论 24.12 非路径性质，通俗的说就是 s 到 v 之间不存在路径，那么 v.d 一直为无穷大
+* 引理 24.13 感觉是废话，看松弛操作的定义就知道，一个连名字都没有的性质
+* 引理 24.14 收敛性质，通俗的说就是对一条最短路径上的边 u~v 来说，如果对其进行松弛之前 u 已收敛，那么松弛后 v 就会收敛，关键在于 u~v 是最短路径上的边
+* 引理 24.15 路径松弛性质，通俗的说就是在一条最短路径上，按照路径上结点的顺序对边进行松弛，则每松弛一条边，其所到达的结点就会收敛。与上面的引理是承接的。看到性质就猜到会用归纳法证明。
+
+#### 松弛操作与最短路径树
+* 引理 24.16 关注的是 Gπ 诱导的根节点为 s 的有根树，重点在于在一系列松弛操作的过程中，Gπ 一直维持有根树的性质
+* 引理 24.17 前驱子图性质，关注的是上条引理中提到的有根树是最短路径树，重点在于从 s 到任意结点的路径都是最短路径
+
+## 感想
+* 在数学领域，愚蠢才会限制一个人的想象力
