--- a/book/Introduction_to_algorithms/24_单源最短路径.md
+++ b/book/Introduction_to_algorithms/24_单源最短路径.md
@@ -1,10 +1,8 @@
 ## 概要
 
-单源最短路径问题产生的基础是，带权重的有向图  
-
-最短路径的含义是，两个结点之间的路径中，总权重和最小的路径  
-
-单源最短路径问题是指，在一个带权重的有向图中，找到从给定源结点到其它每个结点的最短路径  
+* 单源最短路径问题产生的基础是，带权重的有向图  
+* 最短路径的含义是，两个结点之间的路径中，总权重和最小的路径  
+* 单源最短路径问题是指，在一个带权重的有向图中，找到从给定源结点到其它每个结点的最短路径  
 
 #### 最短路径的几个变体
 
@@ -14,23 +12,23 @@
 
 #### 最短路径的最优子结构  
 
-引理 24.1 最短路径的子路径也是最短路径  
+* 引理 24.1 最短路径的子路径也是最短路径  
 
 #### 负权重的边  
 
-如果图中不包含可以到达的权重为负值的环路，则所有结点的最短路径权重都有精确定义  
-如果包含权重为负值的环路，则环路中的结点最短路径权重都为负无穷
+* 如果图中不包含可以到达的权重为负值的环路，则所有结点的最短路径权重都有精确定义  
+* 如果包含权重为负值的环路，则环路中的结点最短路径权重都为负无穷
 
 #### 环路
 
-一条最短路径不能包含权重为正值或负值的环路，如果路径中包含权重为 0 的环路，我们可以重复删除这些环路，直到得到一条不含环路的最短路径  
-所以在之后的讨论中我们假设最短路径都不包含环路
+* 一条最短路径不能包含权重为正值或负值的环路，如果路径中包含权重为 0 的环路，我们可以重复删除这些环路，直到得到一条不含环路的最短路径  
+* 所以在之后的讨论中我们假设最短路径都不包含环路
 
 #### 最短路径的表示
 
-运行最短路径算法得到一个由 π 诱导的前驱子图，这个前驱子图是一颗最短路径树  
-树中的简单路径都是相应结点之间的一条最短路径  
-最短路径不一定是唯一的，最短路径树也不一定是唯一的  
+* 运行最短路径算法得到一个由 π 诱导的前驱子图，这个前驱子图是一颗最短路径树  
+* 树中的简单路径都是相应结点之间的一条最短路径  
+* 最短路径不一定是唯一的，最短路径树也不一定是唯一的  
 
 #### 松弛操作
 
@@ -98,7 +96,7 @@
 * 引理 24.11 上界性质，比较好理解，归纳法证明
 * 推论 24.12 非路径性质，通俗的说就是 s 到 v 之间不存在路径，那么 v.d 一直为无穷大
 * 引理 24.13 感觉是废话，看松弛操作的定义就知道，一个连名字都没有的性质
-* 引理 24.14 收敛性质，通俗的说就是对一条最短路径上的边 u~v 来说，如果对其进行松弛之前 u 已收敛，那么松弛后 v 就会收敛，关键在于 u~v 是最短路径上的边
+* 引理 24.14 收敛性质，通俗的说就是对一条最短路径上的边 u ~ v 来说，如果对其进行松弛之前 u 已收敛，那么松弛后 v 就会收敛，关键在于 u ~ v 是最短路径上的边
 * 引理 24.15 路径松弛性质，通俗的说就是在一条最短路径上，按照路径上结点的顺序对边进行松弛，则每松弛一条边，其所到达的结点就会收敛。与上面的引理是承接的。看到性质就猜到会用归纳法证明。
 
 #### 松弛操作与最短路径树
