--- a/book/Introduction_to_algorithms/25_所有结点对的最短路径问题.md
+++ b/book/Introduction_to_algorithms/25_所有结点对的最短路径问题.md
@@ -28,3 +28,38 @@
 
 #### 步骤四：构建最优解
 * 书中没有给出这一步骤，我思考就是利用概要中给出的方法，由前驱结点矩阵诱导出最短路径树
+
+## Floyd-Warshall 算法
+* Floyd-Warshall 算法的运行时间为 V 的三次方
+
+Floyd-Warshall 算法也是基于动态规划的思想，但是是从另一个角度思考问题，下面的结构还是按照动态规划的思路组织的
+
+#### 最短路径结构（步骤一）
+* Floyd-Warshall 算法考虑的是一条最短路径上的中间结点（实话说从这句话里完全看不清算法的思路）
+* 据我的理解，这里的问题和子问题分别是：  
+  【问题】结点 i 到结点 j 的一条包含的中间结点全部取自 1 ~ k 号结点的最短路径  
+  【子问题】结点 i 到结点 j 的一条包含的中间结点为全部取自 1 ~ k-1 号结点的最短路径  
+  通俗一点讲就是，i 到 j 的路径的中间结点只能从 1 ~ k（或者 k-1）号结点中选择，所形成的最短路径
+  
+#### 所有结点对最短路径问题的一个递归解（步骤二）
+* 给出的递归解是这样的：关于问题 i 到 j 的最短路径，k 阶的 d 表示中间结点全部取自 1 ~ k 号结点的最短路径的权重，递归解说明了如何从 k-1 阶的 d 计算 k 阶的 d，最后计算到 n 阶的 d 就是在整个图中 i 到 j 的最短路径权重
+
+#### 自底向上计算最短路径权重（步骤三）
+* 这一段比较好理解，按照递归式进行计算即可，算法非常紧凑，运行时间为 n 的三次方
+
+#### 构建一条最短路径（步骤四）
+* 按照概述中的描述，构建最短路径需要通过前驱矩阵进行诱导（生成最短路径树）
+* 那么问题就变成了如何构建前驱矩阵，书中说明了两种方法：  
+  【方法一】由上述算法的计算结果 D 矩阵（由 n 阶的 d 组成的矩阵），来构造前驱矩阵  
+  【方法二】在计算 D 矩阵的同时计算前驱矩阵，说是同时其实关联并不紧密，只是用到了 D 矩阵的中间结果，即 1 ~ n 阶的 D 矩阵  
+  
+#### 有向图的传递闭包
+* 传递闭包是这样定义的：定义带权重的有向图 G，如果 G 中的结点 i 到 j 存在可以到达的路径，则（i，j）为 G 的传递闭包中的一条边
+* 可以利用 Floyd-Warshall 算法计算图的传递闭包：给 G 的每条边赋予权重 1，运行 Floyd-Warshall 算法，结果矩阵 D 中小于 n 的 d 值就代表一条闭包中的边（或许书中的表述更易理解：如果存在一条 i 到 j 的路径，则有 d(ij）< n）
+* 还有另外一种方法，用逻辑或 & 逻辑与操作替代 Floyd-Warshall 算法中的 min 和 + 操作（至于为什么可以这样替换我已经放弃思考了，应该是一个不太复杂的数学转换），这样改造后的算法运行会更快，因为逻辑或 & 逻辑与操作要比算法运算更快
+* 我们可以利用 Floyd-Warshall 算法在 V 的三次方时间内计算出图的传递闭包
+
+
+
+
+
