--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -17,7 +17,7 @@
 
 #### 使用反平行边来模拟问题
 * 反平行边是指网络中互为反向的两条边
-* 实际问题中是存在反平行边的，而流网络的定义中禁止反平行边的存在，那么我们可以通过将反平行边中的一条分解为两段（中间插入一个新结点），两段新的边容量与原来的边容量相等
+* 实际问题中是存在反平行边的，而流网络的定义中禁止反平行边的存在，那么我们可以通过将反平行边中的一条分解为两段（中间插入一个新结点）的方法消除反平行边，两段新的边容量设置为与原来的边容量相等
 * 可以证明上述转换后的网络与原网络等价（等价的意思我理解为，计算出的最大流相等）
 
 #### 具有多个源结点和多个汇点的网络
@@ -26,3 +26,6 @@
 
 ## Ford-Fulkerson 方法
 * 几个重要概念：残存网络、增广路径、切割
+* 最大流问题的思路大致为：在残存网络中寻找增广路径，操作增广路径的边以增加流的值，迭代进行操作，直到残存网络中不再存在增广路径为止。
+
+#### 残存网络
