--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -29,3 +29,8 @@
 * 最大流问题的思路大致为：在残存网络中寻找增广路径，操作增广路径的边以增加流的值，迭代进行操作，直到残存网络中不再存在增广路径为止。
 
 #### 残存网络
+* 残存网络是由那些仍有空间对流量进行调整的边构成，通俗的解释一下调整，意思是对一条边上的流量增大或减小（减小或许有助于整个网络的流增加）
+* 残存网络可能包含原图中不存在的边，举例说明：有一条边 u ~ v 的容量为 c，当前的流量为 f（假设 0 < f < c），那么相应的残存网络中会有两条相关的边，一条是 u ~ v，容量为 c - f，另一条边是 v ~ u，容量为 f。这两条边是反平行边。
+* 将残存网络也当做一个流网络来处理（当然得解决其中的反平行边问题），计算出残存网络的流 f‘，将 f’ 称为原网络的流 f 的递增。将 f‘ 叠加到 f 上，即可得到一个更大的流。那么再重新计算残存网络，迭代的增加 f，直到最后的残存网络中的 f’ 等于 0 为止。
+* 引理 26.1 给出了将 f‘ 叠加到 f 上的理论依据，可以证明叠加后的流依然是原图 G 的一个流，且其值为 f + f’
+
