--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -41,4 +41,18 @@
 * 推论 26.3 指出可以将增广路径的流叠加到原来流上形成一个更接近最大流的流
 
 #### 流网络的切割
+* 一个切割定义为两个结点集 S（包含 s）和 T（包含 t）  
+* 横跨切割的净流量 f 定义为，所有 S -> T 的边的流量，减去所有 T -> S 的边的流量  
+* 切割的容量定义为所有 S -> T 的边的容量之和
+* 引理 26.4 指出了横跨切割的净流量等于网络的流 f
+* 推论 26.5 指出任意流 f 不能超过任意切割的容量
+* 定理 26.6 最大流最小切割定理，指出网络的最大流等于某个切割的容量（最小切割）
+
+
+
+
+
+
+
+
 
