--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -48,7 +48,9 @@
 * 推论 26.5 指出任意流 f 不能超过任意切割的容量
 * 定理 26.6 最大流最小切割定理，指出网络的最大流等于某个切割的容量（最小切割）
 
-
+#### 基本的 Ford-Fulkerson 算法
+* 算法的基本思路如上文所述：迭代的寻找增广路径，将增广路径叠加到原来的流上形成一个更大的流，直到残存网络中不存在增广路径为止
+* 没有给出寻找增广路径的方法，算法中一句话带过了。个人思考可以对残存网络使用深度优先遍历来寻找增广路径。
 
 
 
