--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -52,6 +52,19 @@
 * 算法的基本思路如上文所述：迭代的寻找增广路径，将增广路径叠加到原来的流上形成一个更大的流，直到残存网络中不存在增广路径为止
 * 没有给出寻找增广路径的方法，算法中一句话带过了。个人思考可以对残存网络使用深度优先遍历来寻找增广路径。
 
+#### Ford-Fulkerson 算法的分析
+* 算法的运行时间取决于如何寻找增广路径
+* 一个基本的方法是，用深度优先搜索或广度优先搜索找到一条路径，然后路径上的流量都设为 1，以这条路径作为增广路径，如此操作算法的运行时间为 O(E|f|)
+* 这种操作在最大流 f 的值较小时性能很好，f 数值比较大舅不够理想了
+
+#### Edmonds-Karp 算法
+* 算法的核心思路是通过广度优先搜索寻找增广路径，与上一小段不同的是，不再将路径上的流量设为 1，而是寻找路径上能容纳的最大的流量，将其作为路径的流量
+* 引理 26.7 残存网络中的最短路径距离随着每次流量的递增而单调递增。单纯的理解这个引理非常疑惑，让人怀疑这和流 & 增广路径有什么关系。通俗的理解，这里想表达的是，通过 Edmonds-Karp 算法的执行找到一条增广路径（最短路径）后，设置其流量并叠加到图中，新的残存网络中此增广路径必定不存在了，再次寻找的最短路径一定更长。原因是增广路径的流量值设置为路径的最大流量，这样叠加后的图的残存网络一定有某条边消失（即下文中的关建边）
+* 定理 26.8 给出了算法执行的流量递增操作的总次数为 O(VE)
+* Edmonds-Karp 算法的总运行时间为 O(VE²)
+
+
+## 最大二分匹配
 
 
 
