--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -65,6 +65,16 @@
 
 
 ## 最大二分匹配
+* 这一节的内容是利用最大流算法解决图的最大二分匹配问题
+
+#### 最大二分匹配问题
+* 首先需要明确什么是最大二分匹配问题
+* 二分图是指，将一个图的结点集划分为 L 和 R 两部分，且满足边集合 E 中的所有边都横跨 L 和 R
+* 匹配是指，E 的一个子集 M，对于所有结点 v，满足 M 中最多有一条边与结点 v 相连
+* 最大匹配是指，拥有边数量最多的匹配（或者称最大基数的匹配）
+* 那么最大二分匹配问题可以通俗的描述为，在一个二分图中，寻找一个最大匹配的问题
+
+#### 寻找最大二分匹配
 
 
 
