feat(算法导论): update 最大流

--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -75,6 +75,19 @@
 * 那么最大二分匹配问题可以通俗的描述为，在一个二分图中，寻找一个最大匹配的问题
 
 #### 寻找最大二分匹配
+* 这一段的主题是利用最大流算法来解决最大二分匹配问题
+* 首先是将二分图转换成一个新的流网络，再来证明此流网络的最大流即是二分图的最大匹配
+* 转换方法为，增加源结点 s 和汇点 t，增加 s 到 L 所有结点的边，增加 R 所有结点到 t 的边，并将所有边的容量设置为 1  
+* 引理 26.9 指出了二分图的一个匹配对应流网络的一个流（流的值为整数），匹配的基数与流的值相等
+* 定理 26.10 指出如果边的容量都为整数，那么最大流算法生成的最大流的值也是整数值。这里解决了引理 26.9 中要求流的值为整数的问题
+* 推论 26.11 指出二分图的最大匹配基数等于对应的流网络中某一最大流的值
+* 至此，就可以通过将二分图转换为流网络，计算流网络的最大流，推出二分图的最大匹配
+* 方法的运行时间为 O(VE)
+
+
+
+
+
 
 
 
