--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -85,6 +85,61 @@
 * 方法的运行时间为 O(VE)
 
 
+## 推送-重贴标签算法
+* 预流是一种特殊的流（不满足流量守恒），进入一个结点的流可以超过流出该结点的流，进入与流出的差额成为超额流
+* 推送、重贴标签是两种基本操作
+* 本算法的思路是，先在图上建立预流，然后通过推送和重贴标签的反复执行，最终得到一个最大流
+
+#### 直观思想
+* 将图设想为一个由给定容量的管道组成的系统，其中的结点为高度不同的蓄水池，流只能由较高或等高的结点流向另一个结点
+
+#### 基本操作
+* 基本操作即，推送操作（从一个结点将超额流推送到一个邻结点）、重贴标签操作（改变结点的高度）
+* 高度函数 h 的定义为，对所有的边（u，v），有 h(u)<=h(v)+1
+* 引理 26.12 指出，残存网络中的边其高度满足上述函数 h 的定义
+
+#### 推送操作
+* 推送操作的适用条件为，u 是一个溢出结点，边（u，v）的残存容量大于 0，并且 h(u)=h(v)+1
+* 推送操作的原理为，若边（u，v）满足适用条件，则为其增加一个流量，增加幅度为取结点 u 的超额流与边（u，v）的残存容量的较小者
+* 饱和推送，意思是推送操作后，边的残存容量变为 0
+* 引理 26.13 指出，对边（u，v）进行一个非饱和推送后，u 将不再溢出
+
+#### 重贴标签操作
+* 重贴标签操作的适用条件为，结点 u 溢出，且 u 的高度不高于其所有相邻结点（有边从 u 出发到达的结点）
+* 重贴标签的做法是，对满足适用条件的结点 u，将 u 的高度变为，其相邻结点中的最小高度加 1
+
+#### 通用算法
+* 首先给出建立预流的方法，将所有结点的高度和超额流初始化为零，所有边的流量初始化为零，再将所有由 s 出发的边都充满流，这样 s 的邻结点的超额流为 s 到该结点的边的容量
+* 通用算法的过程为，初始化预流，对满足上述两个操作条件的边和结点迭代执行上述两个操作，直到没有满足条件的边和结点为止
+* 引理 26.14 指出，如果 u 是一个溢出结点，则要么可以对其执行推送操作，要么可以执行重贴标签操作
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
