feat(algorithms): update 最大流

--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -113,7 +113,15 @@
 * 通用算法的过程为，初始化预流，对满足上述两个操作条件的边和结点迭代执行上述两个操作，直到没有满足条件的边和结点为止
 * 引理 26.14 指出，如果 u 是一个溢出结点，则要么可以对其执行推送操作，要么可以执行重贴标签操作
 
+#### 推送-重贴标签方法的正确性
+* 引理 26.15 指出，执行算法的过程中，结点高度从来不会降低
+* 引理 26.16 指出，执行算法的过程中，结点的高度 h 始终能维持高度函数的性质
+* 引理 26.17 指出，执行算法的过程中，残存网络中不存在一条从 s 到 t 的路径。这里是与 Edmonds-Karp 算法明显不同的地方，Edmonds-Karp 算法依赖于从残存网络中寻找增广路径（s 到 t 的路径）来完成算法。
+* 定理 26.18 指出，在 Generic-Push-Relabel 算法终止时，预留 f 即为一个最大流。证明方法是用循环不变式证明法，很经典。
 
+#### 推送-重贴标签方法的分析
+* 通过给出执行操作的次数界，来证明算法确实会终止
+* 引理 26.19 指出，对于任意溢出结点 x，残存网络中存在一条从 x 到 s 的简单路径
 
 
 
