--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -122,6 +122,15 @@
 #### 推送-重贴标签方法的分析
 * 通过给出执行操作的次数界，来证明算法确实会终止
 * 引理 26.19 指出，对于任意溢出结点 x，残存网络中存在一条从 x 到 s 的简单路径
+* 引理 26.20 指出，算法执行过程中，结点的高度 h 小于等于 2V-1，显而易见
+* 推论 26.21 给出了重贴标签操作次数的界为，2V²
+* 引理 26.22 给出了饱和推送操作次数的界为，2VE
+* 引理 26.23 给出了非饱和推送操作次数的上界为，4V²(V+E)
+* 定理 26.24 指出，Generic-Push-Relabel 算法执行基本操作的总次数为 O(V²E)
+* 推论 26.25 指出，可以证明对于任意流网络 G，都存在一种通用 Generic-Push-Relabel 算法，其运行时间为 O(V²E)
+
+
+## 前置重贴标签算法
 
 
 
