--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -131,38 +131,30 @@
 
 
 ## 前置重贴标签算法
+* 释放操作：对一个结点进行释放是指，对该结点进行推送或者重贴标签操作，直到该结点不再有正值的超额流量为止
+* 前置：含义是在释放操作时，可能会对结点进行重贴标签，在重贴标签后将该结点移动到链表的最前面
+* 基本思路：以邻接链表的形式存放结点，从头到尾对链表进行扫描，每次选一个结点进行释放，释放可能引起前置，若有前置，则以前置后的下一个结点继续扫描，直至扫描完整个列表
 
+#### 许可边和网络
+* 许可边是指，残存容量大于零，且满足 h(u)=h(v)+1 的边
+* 由许可边组成的图成为许可网络
+* 引理 26.26 指出，许可网络是无环的
+* 引理 26.27 指出，推送操作不会创建新的许可边，但可能会使推送经过的边变为非许可边（饱和推送时）
+* 引理 26.28 指出，重贴标签操作后，至少存在一条从 u 出发的许可边，但不存在进入 u 的许可边
 
+#### 邻接链表
+* 本节详细说明了如何以邻接链表的方式存储结点网络，并维护额外的一些属性
 
+#### 释放溢出结点
+* 本节详细说明了释放操作的过程
+* 基本思路为，选择一个结点 u 进行释放操作，取 u 的邻接结点链表进行遍历，如果 u 的邻接结点 v 满足推送操作的条件则执行推送操作，不满足则继续遍历，遍历到链表尾部则对 u 执行重贴标签操作。重复以上过程直至 u 不再有超额流。
+* 通俗的说明一下就是，尽可能的将 u 的超额流推送给邻接结点，若无法推送则通过对 u 重贴标签增加其高度，再进行推送
+* 引理 26.29 证明了释放操作中进行的推送和重贴标签是合乎条件的
 
+#### 前置重贴标签算法
+* 算法的基本思路上文已经给出
+* 具体步骤是，初始化预流，初始化邻接链表及其属性，对结点的主链表进行遍历，依次对每个结点执行释放操作。执行释放操作后，如果发现其中执行了重贴标签（通过记录高度进行比较），则将该结点前置。前置后继续从该结点的下一个结点（也就是当前主列表中的第二个结点）继续遍历，直至遍历完毕
+* 书中给出了算法的证明，证明了算法执行后确实得到了一个最大流
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#### 前置重贴标签算法的分析
+* 定理 26.30 指出，前置重贴标签算法的运行时间为 O(V³)
