--- a/book/Introduction_to_algorithms/26_最大流.md
+++ b/book/Introduction_to_algorithms/26_最大流.md
@@ -55,7 +55,7 @@
 #### Ford-Fulkerson 算法的分析
 * 算法的运行时间取决于如何寻找增广路径
 * 一个基本的方法是，用深度优先搜索或广度优先搜索找到一条路径，然后路径上的流量都设为 1，以这条路径作为增广路径，如此操作算法的运行时间为 O(E|f|)
-* 这种操作在最大流 f 的值较小时性能很好，f 数值比较大舅不够理想了
+* 这种操作在最大流 f 的值较小时性能很好，f 数值比较大就不够理想了
 
 #### Edmonds-Karp 算法
 * 算法的核心思路是通过广度优先搜索寻找增广路径，与上一小段不同的是，不再将路径上的流量设为 1，而是寻找路径上能容纳的最大的流量，将其作为路径的流量
