--- a/book/Introduction_to_algorithms/27_多线程算法.md
+++ b/book/Introduction_to_algorithms/27_多线程算法.md
@@ -3,4 +3,13 @@
 * 动态多线程是一类重要的并发平台，能够自动进行负载平衡计算
 
 ## 动态多线程基础
+* 以斐波那契数列的计算为例来说明多线程算法的一些基本概念
+* 斐波那契数列的计算以算式 F(n)=F(n-1)+F(n-2) 进行，效率很低
+* 并发关键字 spawn 和 sync，spawn 表示发起并行计算（或者称为派生），sync 表示同步等待，将并行收束到一起再继续执行
 
+#### 多线程执行的模型
+* 从未想过图算法可以用在此处：将多线程计算看成一个有向无环图。其中图的结点表示代表指令，图的边代表指令间的依赖关系。
+* 在分析的过程中，串行执行的一组指令可以被看成一个链
+* 一个链有多个后继链意味着发生了 spawn 操作 
+* 一个链有多个前驱链意味着发生了 sync 操作
+* 图 27-2 将斐波那契数列的算法做了更清晰的标注，以不同的形式注明了哪些是派生边（并发），哪些是调用边（同步执行）。另外图 27-2 的注解中提到了几个我认为比较重要的概念：整个算法的算力消耗，持续时间，关键路径
