feat(高效能): update 前言

--- a/book/高效能人士的七个习惯/0_前言.md
+++ b/book/高效能人士的七个习惯/0_前言.md
@@ -1,1 +1,74 @@
 * 领导力就是清晰地指出别人的价值和潜力，使对方受到鼓舞从而有所意识
+
+## 变化的世界 不变的原则
+* 变化越彻底，挑战越严峻，这七个习惯对人们越重要。因为我们的问题和痛苦是普遍存在的，并且日趋严峻。
+* 作者以几个例子说明了流行思潮和他所坚持的普遍原则（七个习惯）之间的不同
+
+#### 恐惧感和不安全感
+* 人们倾向与零风险的生活，并逃避与他人互相依赖和合作
+* 流行思潮教育人要“独立”，普遍原则认为应该合作与互相依赖
+
+#### 我现在就想得到
+* 流行思潮教育人要立刻有所产出，为了现在牺牲未来
+* 普遍原则认为，持久的、不断上升的成功才是值得称颂的。我们应该在“当前”与“未来”之间找到平衡。
+
+#### 谴责和抱怨
+* 流行思潮让我们习惯性的谴责其他所有人和事，把我们禁锢在这些问题上，找不到解决办法。
+* 普遍原则认为，我们应该足够谦逊以至于能够接受并负起对周遭环境的责任，足够有勇气去付出创造性的努力来战胜或避开困难。
+
+#### 绝望无助
+* 流行思潮，犬儒主义，“不要对生活期望过高，这样你就不会对周围的人或事失望”，翻译到当前的流行文化，大概就是佛系的生活态度。
+* 普遍原则，“我就是我生命的创造力”
+* 关于犬儒主义，在阅读罗马史时了解过这个概念，与此处有所不同，罗马史（盐野七生的罗马人的故事）中描述的是一类文人对着罗马皇帝大放厥词，批评帝政。罗马皇帝回复说，你们好像什么话都敢说，好像恨不得我把你们杀掉，但是就如同我不会杀掉一只向我乱吠的狗一样，我也不会处罚你们。此后这类文人就被称为犬儒派。
+
+#### 缺乏人生平衡
+* 普遍原则是，我们需要明白什么是最重要的事，心灵的平和宁静远非流行文化中的各类工作与生活技巧所能实现的。简单来说就是远离公号文章、远离鸡汤段子。
+
+#### 我的定位在哪儿
+* 流行文化倡导的是，人们只会记住第一名
+* 普遍原则是，真正的大事业，通常只会由思路开阔、内涵丰富的头脑，经由合作、互敬与双赢达成
+
+#### 渴望理解
+* 别人在诉说时，你并非努力聆听并试图理解对方，而常常是忙于思考自己接下来该怎么说
+* 普遍原则是，互相理解的基础是仔细聆听
+
+#### 冲突和分歧
+* 普遍原则是，消弭分歧，创造性的合作。我想到的是，妥协与让步，不懂的妥协与让步的是无法消弭分歧的。
+
+#### 弥留之际
+* 作者最后提了一个问题，人在弥留之际会在意什么？人们想到的是爱人、家人和他们付出过真心的人。这就指出了什么是真正重要的事。
+* 作者还指出，幸福感、成就感和对后人的福祉在“需求层次理论”中应该被置于“自我实现”之上，可以成为“自我超越”。这也是作者毕生都在追寻的东西。
+
+## 七个习惯的简要定义与架构图
+* 首先吐槽一下，这七个习惯的翻译简直惨不忍睹，从中文字面意思简单理解经常与英文原意相去甚远
+
+#### 习惯一 积极主动
+* 人类四项独特的禀赋：自我意识、良知、想象力、独立意志
+
+#### 习惯二 以终为始
+* 英文原文是：Begin With The End In Mind，翻译里 In Mind 去哪里了？
+* 实话说按字面意思理解，我以为意思是，一件事的终点是新的开始，不要满足于当前阶段的完结。但实际的意思是，在头脑里仔细思考后，做出计划再行动，三思而后行。
+
+#### 习惯三 要是第一
+* 把重要的事放在第一位（那么什么是人生最重要的事呢？爱人、家人和我们付出过真心的人）
+
+#### 习惯四 双赢思维
+* 字面意思，简单易懂，我想到的还是互相妥协与达成共识
+
+#### 习惯五 知彼解己
+* 英文原文是：Seek First To Understand, Then To Be Understood，先理解他人，然后寻求被他人理解
+* 这个翻译太凑字数了，感觉就是为了四个字比较整齐
+
+#### 习惯六 统合综效
+* 互相尊重，彼此了解，合作共赢
+
+#### 习惯七 不断更新
+* 在四个基本面（身体、精神、智力、社会/情感）不断更新自己
+* 个人认为可以考虑从上述四个基本面考虑制定计划提升自己，与工作无关，提升的是个人素养
+
+
+
+
+
+
+
