--- a/book/Introduction_to_algorithms/27_多线程算法.md
+++ b/book/Introduction_to_algorithms/27_多线程算法.md
@@ -13,3 +13,15 @@
 * 一个链有多个后继链意味着发生了 spawn 操作 
 * 一个链有多个前驱链意味着发生了 sync 操作
 * 图 27-2 将斐波那契数列的算法做了更清晰的标注，以不同的形式注明了哪些是派生边（并发），哪些是调用边（同步执行）。另外图 27-2 的注解中提到了几个我认为比较重要的概念：整个算法的算力消耗，持续时间，关键路径
+
+#### 性能度量
+* 工作量：是指每个链消耗时间的总和
+* 持续时间：是指有向无环图中关键路径的执行时间
+* 用 P 表示处理器数量，T[P] 表示算法在 P 个处理器上的运行时间，那么 T[1] 就等于工作量，T[∞] 就等于持续时间
+* 工作量定律：通俗的表述为，算法在 P 个处理器上的运行时间大于等于工作量除以 P，只有在并行调度达到完美的情况下才会出现“等于”
+* 持续时间定律：通俗的表述为，算法在 P 个处理器上的运行时间大于等于在无限个处理器上的运行时间
+* 加速比：T[1]/T[P]，表示在 P 个处理器上运行比在 1 个处理器上运行快了多少倍
+* 完美线性加速：就是指完美调度的情况，所有处理器都被最大化的利用，T[1]/T[P] = P
+* 并行度：T[1]/T[∞]，工作量与持续时间之比，是对算法的一个描述
+* 松弛度：(T[1]/T[∞])/P，即并行度除以处理器个数
+
