feat(es6): update 3, create 4

--- a/book/ES6 标准入门/3_变量的解构赋值.md
+++ b/book/ES6 标准入门/3_变量的解构赋值.md
@@ -21,3 +21,18 @@
 * 也可以使用默认值，这个特性比较好，可以在部分情况下省去函数内部的参数合法性判断
 
 ### 圆括号问题
+* 只要有可能，就不要在“模式”中放置圆括号
+* 可以在变量中使用圆括号
+* 个人看法最好还是都不用吧
+
+### 用途
+* 交换变量的值，这个写法有点玄幻。为什么这个写法能正确交换变量值？应该是等号右边的数组是对原变量进行了复制
+* 从函数返回多个值
+* 函数参数的定义
+* 提取 JSON 数据
+* 函数参数的默认值
+* 遍历 Map 结构
+* 输入模块的制定方法
+
+
+
