feat(es6): update 4

--- a/book/ES6 标准入门/4_字符串的扩展.md
+++ b/book/ES6 标准入门/4_字符串的扩展.md
@@ -10,9 +10,11 @@
 * ES2019 开始支持者俩字符了
 * 我们如果一定要在 JSON 中使用这俩字符，最好就用转义的形式
 
-###
+### 模板字符串
+* 在处理文字拼接时十分方便，运算、调用函数、嵌套，甚至可以转换成箭头函数
 
-
+### 标签模板
+* 标签模板是个很复杂的特性，但是个人感觉这又是像变量提升一样让人蛋疼的特性。函数调用不好用吗？为什么一定要用模板、用 tag 来实现函数调用呢？
 
 
 
