feat(note): many things

--- a/book/ES6 标准入门/5_字符串的新增方法.md
+++ b/book/ES6 标准入门/5_字符串的新增方法.md
@@ -3,3 +3,17 @@
 
 ### String.raw()
 * 做转义用的函数，可以用来处理模板
+
+### normalize
+* normalize 用来将字符的不同表示方法统一为同样的形式，这称为 Unicode 正规化
+
+### endsWith
+* 使用第二个参数n时，endsWith的行为与其他两个方法有所不同，它针对前n个字符
+
+### 字符串补全长度
+* 如果某个字符串不够指定长度，会在头部或尾部补全。padStart()用于头部补全，padEnd()用于尾部补全。
+
+### trim 方法
+* trimStart()消除字符串头部的空格，trimEnd()消除尾部的空格。它们返回的都是新字符串，不会修改原始字符串。
+
+
