--- a/AI/2023_01.md
+++ b/AI/2023_01.md
@@ -1,1 +1,12 @@
-* [2023-01-09]https://mp.weixin.qq.com/s/QDkb-8NCIp63NO5i2ntI3Q，公号推荐的一些 2022 年优秀的论文
+* 【2023-01-09】https://mp.weixin.qq.com/s/QDkb-8NCIp63NO5i2ntI3Q，公号推荐的一些 2022 年优秀的论文
+
+* 【2023-01-10】https://www.infoq.cn/article/oxYBmr0IeBykqjQUM2zR，AI 一周资讯，没有太多干货，基本都是裁员之类的坏消息
+* 【2023-01-10】https://mp.weixin.qq.com/s/4oTgc-C-rU3mkuTjx18zsQ，腾讯也在降本增效，寻求盈利
+* 【2023-01-11】https://github.com/openai/openai-cookbook，OpenAI 的一些 API 应用 cookbook，有好些有意思功能
+* 【脑洞一下】已经有人在用 AI 写论文了，也有人用 AI 做 PPT，啥时候能有人开发一个自动写述职和规划的工具？如果有，你愿意付费使用吗？
+* 【2023-01-13】https://github.com/karpathy/nanoGPT，微型 GPT，可以在笔记本上跑，可以试试
+* 【2023-01-13】https://zhuanlan.zhihu.com/p/598257874，讲了美国各大厂在 AI 领域的布局
+
+* 【2023-01-17】https://www.infoq.cn/article/UWd2BvABJTlU10jiQKrg，滴滴要活了，扶持平台型企业的政策起作用了
+* 【2023-01-17】https://www.infoq.cn/article/CdWBHy6cTB5asNagLO7d，AI 一周资讯，没啥干货
+* 【2023-01-17】https://github.com/ai-collection/ai-collection，一个类似于 awesome-xxx 的合集，列举了很多生成式 AI 应用
